src/objects/slackv2__Setup_Data__c.object
<CustomObject>
    <label>Setup Data</label>
    <nameField>
        <label>Setup Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Data</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>slackv2__Job_Frequency__c</fullName>
        <label>Job Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Job_Start_Hour__c</fullName>
        <label>Job Start Hour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Optional_Steps_Completed__c</fullName>
        <label>Optional Steps Completed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>slackv2__SFDC_Auth_Step_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Auth Step Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>